History for xm.theme
====================

1.0.2 (unreleased)
------------------

- cleaned up columns.css [mirella]

- finished cleaning up authoring.css [mirella]

- started with cleaning up authoring.css [mirella]

- cleaned up public.css and base.css [mirella]

- more css code clean up [mirella]

- started with cleaning up css code [mirella]

- added german translation [jensens]

- Fix z-index for kupu-fulleditor-zoomed on #portal-top and 
  .documentContent. [laurens] 


1.0.1 (2009-03-22)
------------------

- Add-iteration css updated for planned iterations view [jladage]


1.0 (2009-03-15)
----------------
- removed cachesettings.xml because it contains site specifice configuration.
  It's now located in project.setup [jladage]

- added title to my projects menu

- added mockup folder for design proposals [laurens]

- moved two xm.theme specefic classes from extreme.css to xm.theme's main.css [laurens]

- removed two images from eXtremeManagement that weren't being used [laurens]

- disabled .myProject in print.css [laurens]

- Ticket #148 - Removed 'my project' link. [simon]

- Ticket #147 - Overrode path_bar template to remove 'Home'. [simon]

- Fixed KSSUnicodeError in the fullname viewlet when you have a
  non-ascii name.  [maurits]

- Added Products.eXtremeManagement>=2.0alpha3 to our dependencies in
  setup.py.  http://plone.org/products/extreme-management-tool/issues/157
  shows we need at least that version.  [maurits]


1.0rc2 (2009-02-25)
-------------------

- Added cachesettings.xml to store our xm rules.


1.0rc1 (2009-01-25)
-------------------

- Added extra viewlet for the my project stub in portaltop. [jladage]

- Fixed issue 100, insert list of projects on DOM load. [reinout +
  mark]

- Fixed issue 135, Titles of portlets are now not transformed to
  capitalized.  [jladage]

- Fixed issue 126, When adding a project the header was not displayed.
  [jladage]


1.0beta2 (2009-01-15)
---------------------
