@@ -1,185 +1,102 @@
 /*
 ** Stylesheet with Internet Explorer-specific workarounds.
 */
-
 /* <dtml-with base_properties> */
 
-.searchGadgetFix {
-    top: 1px;
-}
+.searchGadgetFix { top: 1px; }
 
-* html #portal-columns {
-  width: 100%;
-}
-* html*#portal-columns {
-    width: auto;
-}
-input {
-    margin-bottom: 1px; /* bug fix */
-}
-table.listing td.top {
-    /* insane IE row bug workaround */
-    position: relative;
-    left: -1px;
-    top: -1px;
-}
+* html #portal-columns { width: 100%; }
+* html*#portal-columns { width: auto; }
+input { margin-bottom: 1px; } /* bug fix */ 
+
 div#portal-columns div#portal-column-one,
-div#portal-columns div#portal-column-two {
-    overflow: hidden;
-}
-textarea {
-    width: 97%;
-}
-.visualOverflow {
-    width: 88%;
-}
-.visualGhosted {
-    filter:alpha(opacity=20); 
-}
+div#portal-columns div#portal-column-two { overflow: hidden; }
+textarea { width: 97%; }
+.visualOverflow { width: 88%; }
+.visualGhosted { filter:alpha(opacity=20); }
 
 /* make spans within ABBR have a border in IE6 the same way it is in all other browsers */
-* html abbr .explain {
-    border-bottom: &dtml-borderWidth; dotted &dtml-fontColor;;
-}
+* html abbr .explain { border-bottom: &dtml-borderWidth; dotted &dtml-fontColor;; }
+.actionMenu .actionMenuHeader a { display: inline; }
+.actionMenu .actionMenuContent { top: 1.4em; }
+.ploneCalendar td { width:1%; }
+#floatholder, #float { height: 1%; }
+* html h1.documentFirstHeading { height: auto; }
+
+/* Rounded corner workarounds for IE */
+* html .portletHeader { height: 1%; }
 
 /* Fix bottom margin on tabs in IE */
-#portal-globalnav li.selected a {
-position: relative;
+#portal-globalnav li.selected a { position: relative; }
+
+table.listing td.top {
+  /* insane IE row bug workaround */
+  position: relative;
+  left: -1px;
+  top: -1px;
 }
 #portal-colophon .colophonIcon {
-    height: 0px !important;
-    height /**/: 15px;
+  height: 0px !important;
+  height /**/: 15px;
 }
-.actionMenu .actionMenuHeader a {
-    display: inline;
-}
-.actionMenu .actionMenuContent {
-    top: 1.4em;
-}
-
 /* Calendar fixes */
 .ploneCalendar { 
     border-collapse:collapse;
     width:auto; 
     height:1%;
 }
-.ploneCalendar td { 
-    width:1%;
-}
 .ploneCalendar .todaynoevent,
-.ploneCalendar .todayevent {
-    position: relative;
+.ploneCalendar .todayevent { position: relative; }
+.hiddenStructure { 
+/* This is necessary to eliminate the 1px high object in the document flow in 
+    place of .hiddenStructure block objects */
+  position: absolute;
 }
-.hiddenStructure { /* This is necessary to eliminate the 1px high object in
-                      the document flow in place of .hiddenStructure block objects */
-    position: absolute;
-}
-
-/* These work in IE only, changes the look of the scrollbar + textareas 
-   We disabled these in Plone 3.0, but if you want them back, uncomment 
-*/
-/*
-body { 
-    scrollbar-base-color: &dtml-globalBackgroundColor;;
-    scrollbar-highlight-color: &dtml-globalBackgroundColor;;
-    scrollbar-track-color: &dtml-evenRowBackgroundColor;;
-    scrollbar-darkshadow-color: &dtml-evenRowBackgroundColor;;
-    scrollbar-3dlight-color: &dtml-globalBorderColor;;
-    scrollbar-shadow-color: &dtml-globalBorderColor;;
-    scrollbar-arrow-color: &dtml-globalFontColor;;
-}
-*/
-
-/* Holly hack to kill the Peekaboo bug in IE - details at
-   http://www.positioniseverything.net/explorer/peekaboo.html
-   "* html" syntax is added to hide it from IE5/Mac. ~limi
- */
-
-#floatholder, #float {
-    height: 1%;
-}
-
-* html .link-external,
-* html .link-external a,
-* html .link-mailto a,
-* html .link-mailto {
-     height: 1%; 
-} 
+* html .link-external, * html .link-external a,
+* html .link-mailto a, * html .link-mailto { height: 1%; } 
 
 /* Fix for IE float bug */
 * html .visualIEFloatFix,
-* html h1,
-* html h2,
-* html h3,
-* html h4,
-* html h5,
-* html h6,
-* html dd,
-* html .documentDescription,
-* html .visualClear,
-* html .portalMessage,
+* html h1, * html h2,
+* html h3, * html h4,
+* html h5, * html h6,
+* html dd, * html .documentDescription,
+* html .visualClear, * html .portalMessage,
 * html .portalWarningMessage,
 * html .portalStopMessage,
 * html .system-message,
 * html #error-handling,
-* html .documentContent {
-    height: 0.1%;
-}
+* html .documentContent { height: 0.1%; }
 
 /* Fix for IE float bug - have to use the Limi Hack here, since the paragraph
    tag doesn't take nicely to the height hack above in IE. */
-* html p {
-    position: relative;
-}
-* html h1.documentFirstHeading {
-    height: auto;
-}
+* html p { position: relative; }
 
 /* There appears to be a bug in some IE 6 versions that causes dashed borders
    to get positioned strangely (i.e. out of the portlet in this case), and
    to move about when scrolling.  May be related to:
    http://mtiki.mmf.at/mt/archives/000011.html */
-dd.portletFooter {
-    border-top-style: solid;
-}
+dd.portletFooter { border-top-style: solid; }
 
-/* Rounded corner workarounds for IE */
-* html .portletHeader {
-    height: 1%;
-}
 .portletTopRight, 
-.portletTopLeft {
-    top: 0px;
-}
+.portletTopLeft { top: 0px; }
+
 .portletTopRight,
 .portletTopLeft,
 .portletBottomRight,
-.portletBottomLeft {
-    font-size: 1px;
-}
+.portletBottomLeft { font-size: 1px; }
 
 /* fix for the horizontal scroll due to the floated searchbox without width definition */
-* html #portal-searchbox {
-    overflow: auto; 
-}
-* html body.fullscreen #portal-searchbox {
-    overflow: visible;
-}
-
+* html #portal-searchbox { overflow: auto; }
+* html body.fullscreen #portal-searchbox { overflow: visible; }
 
 /* IE doesn't know what to do with the caption element, hide it */
-table.ploneCalendar caption {
-    display: none !important;
-}
+table.ploneCalendar caption { display: none !important; }
 
 /* IE6 adds gap between portalMessage's DT and DD. We need to minimize it */
-* html dl.portalMessage dt {
-    margin-right: 0;
-}
-
+* html dl.portalMessage dt { margin-right: 0; }
 .documentContent {
-    *padding-top: 22px !important; /* this IE7 hack fixes a spacing issue with the .contentActions container*/
-    *width: 688px; /* this IE7 hack ensures that content inside documentContent doesn't strech the container up*/
+  *padding-top: 22px !important; /* this IE7 hack fixes a spacing issue with the .contentActions container*/
+  *width: 688px; /* this IE7 hack ensures that content inside documentContent doesn't strech the container up*/
 }
-
 /* </dtml-with> */
